nginx: Fix root path env

--- a/drupal-nginx/sites/default.conf
+++ b/drupal-nginx/sites/default.conf
@@ -3,7 +3,7 @@ server {
     listen [::]:80;
 
     server_name localhost;
-    root /var/www/html; ## <-- Your only path reference.
+    root {{ getenv "NGINX_SERVER_ROOT" "/var/www/html/" }};
 
     location = /favicon.ico {
         log_not_found off;
