--- a/drupal-php/Dockerfile
+++ b/drupal-php/Dockerfile
@@ -4,16 +4,20 @@ FROM php:7.1-fpm-alpine
 # postgresql-dev is needed for https://bugs.alpinelinux.org/issues/3642
 RUN set -ex \
 	&& apk add --no-cache --virtual .build-deps \
+	  autoconf \
+		build-base \
 		coreutils \
 		freetype-dev \
 		libjpeg-turbo-dev \
 		libpng-dev \
+		make \
 		postgresql-dev \
 	&& docker-php-ext-configure gd \
 		--with-freetype-dir=/usr/include/ \
 		--with-jpeg-dir=/usr/include/ \
 		--with-png-dir=/usr/include/ \
 	&& docker-php-ext-install -j "$(nproc)" gd mbstring opcache pdo pdo_mysql pdo_pgsql sockets zip \
+	&& pecl install redis \
 	&& runDeps="$( \
 		scanelf --needed --nobanner --recursive \
 			/usr/local/lib/php/extensions \
@@ -22,12 +26,10 @@ RUN set -ex \
 			| xargs -r apk info --installed \
 			| sort -u \
 	)" \
-
+  && docker-php-ext-enable redis \
 	&& apk add --virtual .drupal-phpexts-rundeps $runDeps \
-	&& apk del .build-deps
-//Redis
-RUN pecl install redis-3.1.0 \
-    && docker-php-ext-enable redis
+	&& apk del .build-deps autoconf build-base
+	    
 # set recommended PHP.ini settings
 # see https://secure.php.net/manual/en/opcache.installation.php
 RUN { \
