--- a/drupal-nginx/sites/default.conf.template
+++ b/drupal-nginx/sites/default.conf.template
@@ -2,6 +2,11 @@ server {
     listen 80;
     listen [::]:80;
 
+    gzip on;
+    gzip_min_length 1000;
+    gzip_types text/plain application/xml text/css application/javascript;
+    gunzip on;
+
     server_name localhost;
     root ${NGINX_SERVER_ROOT};
 
@@ -43,6 +48,7 @@ server {
     }
 
     location / {
+        gzip_static on;
         # try_files $uri @rewrite; # For Drupal <= 6
         try_files $uri /index.php?$query_string; # For Drupal >= 7
     }
