--- a/drupal-nginx/sites/default.conf.template
+++ b/drupal-nginx/sites/default.conf.template
@@ -4,7 +4,7 @@ server {
 
     gzip on;
     gzip_min_length 1000;
-    gzip_types text/plain application/xml text/css application/javascript;
+    gzip_types text/plain application/xml text/css application/javascript application/json;
     gunzip on;
 
     server_name localhost;
@@ -91,6 +91,7 @@ server {
     # location ~ ^/sites/.*/files/imagecache/ { # For Drupal <= 6
     location ~ ^/sites/.*/files/styles/ { # For Drupal >= 7
         try_files $uri @rewrite;
+        expires max;
     }
 
     # Handle private files through Drupal. Private file's path can come
@@ -99,7 +100,7 @@ server {
         try_files $uri /index.php?$query_string;
     }
 
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|woff)$ {
         expires max;
         log_not_found off;
     }
