--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -17,6 +17,9 @@ RUN apk update && apk add --update --no-cache \
 		php7-zip \
 		php7-zlib && \
 		ln -s /usr/bin/php7 /usr/bin/php
+RUN { \
+				echo 'zend_extension=xdebug.so'; \
+		} > /etc/php7/conf.d/xdebug.ini
 RUN php7 -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" && \
 		php7 -r "if (hash_file('SHA384', 'composer-setup.php') === \
 		'669656bab3166a7aff8a7506b8cb2d1c292f042046c5a994c43155c0be6190fa0355160742ab2e1c88d40d5be660b410') \
