jenkins: Enable xdebug logs

--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -21,6 +21,9 @@ RUN apk update && apk add --update --no-cache \
 		ln -s /usr/bin/php7 /usr/bin/php
 RUN { \
 				echo 'zend_extension=xdebug.so'; \
+				echo 'xdebug.force_display_errors=1'; \
+				echo 'xdebug.force_error_reporting=1'; \
+				echo 'xdebug.show_error_trace=1' \
 		} > /etc/php7/conf.d/xdebug.ini && \
 		{ \
 				echo 'opcache.enable=1'; \
