--- a/tools-nginx/init/nginx.conf
+++ b/tools-nginx/init/nginx.conf
@@ -2,6 +2,7 @@ user  nginx;
 worker_processes  1;
 
 error_log  /var/log/nginx/error.log warn;
+error_log  /dev/stdout info;
 pid        /var/run/nginx.pid;
 
 events {
@@ -15,6 +16,7 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
     access_log  /var/log/nginx/access.log  main;
+    access_log  /dev/stdout;
     sendfile        on;
     #tcp_nopush     on;
     keepalive_timeout  65;
