--- a/tools-nginx/init/nginx.conf
+++ b/tools-nginx/init/nginx.conf
@@ -17,6 +17,7 @@ http {
                       '"$http_user_agent" "$http_x_forwarded_for"';
     access_log  /var/log/nginx/access.log  main;
     access_log  /dev/stdout;
+    disable_symlinks off;
     sendfile        on;
     #tcp_nopush     on;
     keepalive_timeout  65;
