--- a/tools-nginx/init/nginx.conf
+++ b/tools-nginx/init/nginx.conf
@@ -1,5 +1,6 @@
 user  nginx;
 worker_processes  1;
+client_max_body_size 1024m;
 
 error_log  /var/log/nginx/error.log warn;
 error_log  /dev/stdout info;
