php: Update workdirectory path

--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -30,6 +30,6 @@ RUN { \
 		echo 'opcache.enable_cli=1'; \
 	} > /usr/local/etc/php/conf.d/opcache-recommended.ini
 
-WORKDIR /var/www/html
+WORKDIR /var/www
 EXPOSE 9000
 CMD ["php-fpm"]
