mariadb: Set version to image

--- a/drupal-mariadb/Dockerfile
+++ b/drupal-mariadb/Dockerfile
@@ -1,9 +1,7 @@
-FROM mariadb:latest
+FROM mariadb:10.2
 
 ADD ./my_config.cnf /etc/mysql/conf.d/
 RUN chmod 0644 /etc/mysql/conf.d/my_config.cnf
-#COPY ./docker-entrypoint-initdb.d /docker-entrypoint-initdb.d
-#COPY ./docker-entrypoint.sh /docker-entrypoint.sh
 ENTRYPOINT ["docker-entrypoint.sh"]
 
 EXPOSE 3306
