awscli: Add git package

--- a/aws-cli/Dockerfile
+++ b/aws-cli/Dockerfile
@@ -3,6 +3,7 @@ FROM alpine:3.7
 ENV AWSCLI_VERSION "1.14.30"
 
 RUN apk --update add --no-cache \
+				git \
 				python \
 				py-pip \
 				groff \
